<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CheckList.CheckListFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <CheckBox
                android:id="@+id/checkbox1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/CheckList_1" />

            <CheckBox
                android:id="@+id/checkbox2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/CheckList_2" />

            <CheckBox
                android:id="@+id/checkbox3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/CheckList_3" />

            <CheckBox
                android:id="@+id/checkbox4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/CheckList_4" />

            <CheckBox
                android:id="@+id/checkbox5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/CheckList_5" />

            <CheckBox
                android:id="@+id/checkbox6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/CheckList_6" />

            <CheckBox
                android:id="@+id/checkbox13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/CheckList_13" />

            <CheckBox
                android:id="@+id/checkbox7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/CheckList_7" />

            <CheckBox
                android:id="@+id/checkbox8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/CheckList_8" />

            <CheckBox
                android:id="@+id/checkbox9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/CheckList_9" />

            <CheckBox
                android:id="@+id/checkbox10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/CheckList_10" />

            <CheckBox
                android:id="@+id/checkbox11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/CheckList_11" />

            <CheckBox
                android:id="@+id/checkbox12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/CheckList_12" />
        </LinearLayout>

    </ScrollView>
</LinearLayout>