<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_myInfo"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/menu_mi_informacion" />
        <item
            android:id="@+id/menu_aboutUs"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/menu_about_us" />
        <item
            android:id="@+id/menu_checklist"
            android:icon="@drawable/liste"
            android:title="@string/menu_checklist" />

        <item
            android:id="@+id/menu_contacto"
            android:icon="@drawable/ic_contacts_black_24dp"
            android:title="@string/menu_contacto" />

        <item
            android:id="@+id/menu_gastos"
            android:icon="@drawable/ic_add_shopping_cart_black_24dp"
            android:title="@string/menu_gastos" />
    </group>


</menu>
