<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Register.RegisterActivity">


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/appBar"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="Registro"/>

    </com.google.android.material.appbar.AppBarLayout>



    <ScrollView
        android:layout_below="@id/appBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <ImageView
                android:id="@+id/logo"
                android:layout_width="300dp"
                android:layout_height="230dp"
                android:layout_marginStart="8dp"
                android:layout_gravity="center"
                android:background="@drawable/logo"/>

            <EditText
                android:id="@+id/edtNombre"
                android:layout_width="328dp"
                android:paddingStart="60dp"
                android:hint="Nombre"
                android:layout_height="45dp"
                android:paddingRight="10dp"
                android:background="@drawable/edit_nom_user"/>


            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="328dp"
                android:paddingStart="60dp"
                android:hint="@string/Ac_login_txt_email"
                android:paddingRight="10dp"
                android:background="@drawable/edit_email"
                android:layout_height="45dp" />

            <EditText
                android:id="@+id/edTxtPassword"
                android:layout_width="328dp"
                android:layout_height="45dp"
                android:ems="10"
                android:hint="@string/Ac_login_txt_password"
                android:inputType="textPassword"
                android:background="@drawable/edit_password"
                android:paddingStart="60dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edTxtUser" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="315dp"
                android:layout_height="55dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/btn_connecter"
                android:text="@string/Ac_login_txt_registrarse"/>
        </LinearLayout>



    </ScrollView>


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp" />


</RelativeLayout>